--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 
 <h1>Biotecnologia(queijo)</h1>
 
- Hoje em dia estamos muito familiarizados com termos novos que  envolvam tecnologia, com a  biotecnologia sendo um grande exemplo, 
+<p>Hoje em dia estamos muito familiarizados com termos novos que  envolvam tecnologia, com a  biotecnologia sendo um grande exemplo, 
 mas mesmo que ela seja um termo relativamente novo, muitas técnicas que são consideradas biotecnologia existem a centenas de anos, 
-como a fabricação dos queijos a partir de bactérias.
- Como vimos anteriormente, o queijo é fabricado com técnicas biotecnologicas, essas técnicas fazem com que o leite passe de estado 
+como a fabricação dos queijos a partir de bactérias.</p>
+<p>Como vimos anteriormente, o queijo é fabricado com técnicas biotecnologicas, essas técnicas fazem com que o leite passe de estado 
 líquido para um estado mais gelatinoso, esse estado gelatinoso é conhecido como coalhada, exitem duas forma de fazer o leite coalhar, 
-sendo elas a coagulação enzimática e a coagulação ácida.
- A coagulação ácida, é obtida por meios biológicos, esses meios biológicos são geralmente bactérias do fermento, que quando são 
-adicionadas ao leite produzem ácido lático, este tipo de coagulação
-é usada em muitos poucos tipos de queijos, sendo os mais conhecidos os petit suisse e o cream cheese.
- A outra forma de coagulação, é a coagulação enzimática, embora ela não use bactérias ou fungos em seu processo, essa coagulação é 
+sendo elas a coagulação enzimática e a coagulação ácida.</p>
+<p>A coagulação ácida, é obtida por meios biológicos, esses meios biológicos são geralmente bactérias do fermento, que quando são 
+adicionadas ao leite produzem ácido lático, este tipo de coagulaçãoé usada em muitos poucos tipos de queijos, sendo os mais conhecidos 
+os petit suisse e o cream cheese.</p>
+<p>A outra forma de coagulação, é a coagulação enzimática, embora ela não use bactérias ou fungos em seu processo, essa coagulação é 
 a mais comum de ser ultilizada, a coagulação enzimática é realizada a partir da adição de enzimas específicas, essas enzimas são 
-conhecidas como coalho ou coagulante. Após o leite for coagulado ele é prensado e vira o quijo que conhecemos.
+conhecidas como coalho ou coagulante. Após o leite for coagulado ele é prensado e vira o quijo que conhecemos.</p>
