--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
-# bio-queijo-
-
 <!DOCTYPE html>
+<html lang="pt-br">
 
-<h1>Biotecnologia(queijo)</h1>
+ <head>
+   <meta charset=”UTF8”>
+   <title>Biotecnologia</title> 
+   <link rel="stylesheet" href="style.css">
+ </head>  
 
-<p>Hoje em dia estamos muito familiarizados com termos novos que  envolvam tecnologia, com a  biotecnologia sendo um grande exemplo, 
-mas mesmo que ela seja um termo relativamente novo, muitas técnicas que são consideradas biotecnologia existem a centenas de anos, 
-como a fabricação dos queijos a partir de bactérias.</p>
-<p>Como vimos anteriormente, o queijo é fabricado com técnicas biotecnologicas, essas técnicas fazem com que o leite passe de estado 
-líquido para um estado mais gelatinoso, esse estado gelatinoso é conhecido como coalhada, exitem duas forma de fazer o leite coalhar, 
-sendo elas a coagulação enzimática e a coagulação ácida.</p>
-<p>A coagulação ácida, é obtida por meios biológicos, esses meios biológicos são geralmente bactérias do fermento, que quando são 
-adicionadas ao leite produzem ácido lático, este tipo de coagulaçãoé usada em muitos poucos tipos de queijos, sendo os mais conhecidos 
-os petit suisse e o cream cheese.</p>
-<p>A outra forma de coagulação, é a coagulação enzimática, embora ela não use bactérias ou fungos em seu processo, essa coagulação é 
-a mais comum de ser ultilizada, a coagulação enzimática é realizada a partir da adição de enzimas específicas, essas enzimas são 
-conhecidas como coalho ou coagulante. Após o leite for coagulado ele é prensado e vira o quijo que conhecemos.</p>
+ <body>
+   <h1>Biotecnologia(queijo)</h1>
+
+   <p>Hoje em dia estamos muito familiarizados com termos novos que  envolvam tecnologia, com a  biotecnologia sendo um grande exemplo, 
+   mas mesmo que ela seja um termo relativamente novo, muitas técnicas que são consideradas biotecnologia existem a centenas de anos, 
+   como partir de a fabricação dos queijos apartir de<em><strong> bactérias.</em></strong></p>
+
+   <p>Como vimos anteriormente, o queijo é fabricado com técnicas biotecnologicas, essas técnicas fazem com que o leite passe de estado 
+    líquido para um estado mais gelatinoso, esse estado gelatinoso é conhecido como coalhada, exitem duas forma de fazer o leite coalhar, 
+    sendo elas a <strong><em>coagulação enzimática</em></strong> e a <strong><em>coagulação ácida.</em></strong></p>
+
+    <p>A coagulação ácida, é obtida por meios biológicos, esses meios biológicos são geralmente bactérias do fermento, que quando são 
+    adicionadas ao leite produzem ácido lático, este tipo de coagulaçãoé usada em muitos poucos tipos de queijos,<strong> sendo os mais conhecidos 
+    os: <em>petit suisse e o cream cheese.</em></strong></p>
+
+    <p>A outra forma de coagulação, é a coagulação enzimática, embora ela não use bactérias ou fungos em seu processo, essa coagulação é 
+    a mais comum de ser ultilizada, a coagulação enzimática é realizada a partir da adição de enzimas específicas, essas enzimas são 
+    conhecidas como coalho ou coagulante. Após o leite for coagulado ele é prensado e vira o queijo que conhecemos.</p>
+ </body>   
+</html>
