--- a/index.html
+++ b/index.html
@@ -2,28 +2,43 @@
 <html lang="pt-br">
 
  <head>
-   <meta charset=”UTF8”>
-   <title>Biotecnologia</title> 
-   <link rel="stylesheet" href="style.css">
+        <meta charset=”UTF8”>
+        <title>Biotecnologia(queijo)</title> 
+        <link rel="stylesheet" href="style.css">
  </head>  
 
  <body>
-   <h1>Biotecnologia(queijo)</h1>
 
-   <p>Hoje em dia estamos muito familiarizados com termos novos que  envolvam tecnologia, com a  biotecnologia sendo um grande exemplo, 
-   mas mesmo que ela seja um termo relativamente novo, muitas técnicas que são consideradas biotecnologia existem a centenas de anos, 
-   como partir de a fabricação dos queijos apartir de<em><strong> bactérias.</em></strong></p>
+     <header><h1>Biotecnologia</h1></header>
+   <img id="queijo"; src="queijo.jpg">
+    
+    <div class="introdução">
+        <h2>Queijo</h2>
 
-   <p>Como vimos anteriormente, o queijo é fabricado com técnicas biotecnologicas, essas técnicas fazem com que o leite passe de estado 
-    líquido para um estado mais gelatinoso, esse estado gelatinoso é conhecido como coalhada, exitem duas forma de fazer o leite coalhar, 
-    sendo elas a <strong><em>coagulação enzimática</em></strong> e a <strong><em>coagulação ácida.</em></strong></p>
+        <p>Hoje em dia estamos muito familiarizados com termos novos que  envolvam tecnologia, com a  biotecnologia sendo um grande exemplo, 
+        mas mesmo que ela seja um termo relativamente novo, muitas técnicas que são consideradas biotecnologia existem a centenas de anos, 
+        como partir de a fabricação dos queijos apartir de<em><strong> bactérias.</em></strong></p>
 
-    <p>A coagulação ácida, é obtida por meios biológicos, esses meios biológicos são geralmente bactérias do fermento, que quando são 
-    adicionadas ao leite produzem ácido lático, este tipo de coagulaçãoé usada em muitos poucos tipos de queijos,<strong> sendo os mais conhecidos 
-    os: <em>petit suisse e o cream cheese.</em></strong></p>
+        <p>Como vimos anteriormente, o queijo é fabricado com técnicas biotecnologicas, essas técnicas fazem com que o leite passe de estado 
+        líquido para um estado mais gelatinoso, esse estado gelatinoso é conhecido como coalhada, exitem duas forma de fazer o leite coalhar, 
+        sendo elas a <strong><em>coagulação enzimática</em></strong> e a <strong><em>coagulação ácida.</em></strong></p>
+    </div>
 
-    <p>A outra forma de coagulação, é a coagulação enzimática, embora ela não use bactérias ou fungos em seu processo, essa coagulação é 
-    a mais comum de ser ultilizada, a coagulação enzimática é realizada a partir da adição de enzimas específicas, essas enzimas são 
-    conhecidas como coalho ou coagulante. Após o leite for coagulado ele é prensado e vira o queijo que conhecemos.</p>
+    <div class="coagulação-ácida">    
+        <p>A coagulação ácida, é obtida por meios biológicos, esses meios biológicos são geralmente bactérias do fermento, que quando são 
+        adicionadas ao leite produzem ácido lático, este tipo de coagulaçãoé usada em muitos poucos tipos de queijos,<strong> sendo os mais conhecidos 
+        os: <em>petit suisse e o cream cheese.</em></strong></p>
+    </div>
+
+    <img class="cream"; src="cream.cheese.jpg"> 
+
+    <div class="coagulação-enzimática">
+        <p>A outra forma de coagulação, é a coagulação enzimática, embora ela não use bactérias ou fungos em seu processo, essa coagulação é 
+        a mais comum de ser ultilizada, a coagulação enzimática é realizada a partir da adição de enzimas específicas, essas enzimas são 
+        conhecidas como coalho ou coagulante. Após o leite for coagulado ele é prensado e vira o queijo que conhecemos.</p>
+    </div>
+
+    <img class="minas"; src="queijo.minas.jpg">
+
  </body>   
 </html>
